# Antigravity

./: .git-fix-test.md  .gitignore  AUDIT_REMEDIATION_TRACKER.md  CLAUDE.md  CODEX_REMEDIATION_TRACKER.md  DATABASE_MIGRATION_PROPOSAL_ADDONS.sql  DEPLOYMENT.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_SUCCESS.md  FEATURE_PROPOSAL_ADDONS.md  IMPLEMENTATION_TRACKER.md  MVP_PRODUCTION_READINESS_TRACKER.md  PRODUCTION_READINESS.md  QUICK_DASHBOARD_ACTIONS.md  README.md  REMEDIATION_TRACKER.md  REMEDIATION_TRACKER_S27.md  REMEDIATION_TRACKER_S32.md  REMEDIATION_TRACKER_S33.md  TRACKER.md  TROUBLESHOOTING_GUIDE.md  VERCEL_DASHBOARD_SETUP.md  VERCEL_SETUP_INSTRUCTIONS.md  VERIFY_DEPLOYMENT.md  cleanup-repo.sh  deploy.sh  package-lock.json  vercel.json
.claude/: launch.json
.claude/commands/: review-deep.md  review-perf.md  review-security.md  review.md
.github/: INTEGRATION_TEST_INSTRUCTIONS.md  TEST_AUTO_MERGE.md  dependabot.yml  roadmap.json
.github/scripts/: check-merge-safety.js  execute-merge.js  test-auto-merge.sh
.github/workflows/: auto-merge-on-task-done.yml  ci.yml  travel-suite-ci.yml  vercel-production-deploy.yml
docs/: AUTO_MERGE.md  GOBUDDY_ASSISTANT.md  REPOSITORY_OVERVIEW.md
docs/archive/: AUDIT_REMEDIATION_TRACKER.md  FIX_GOOGLE_SIGNIN_REDIRECT.md  MARKETPLACE_DEPLOYMENT_FINAL.md  (+4 more)
projects/ai-newsletter/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_NEWSLETTER_ARCHITECTURE.md  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
projects/ai-newsletter/.github/workflows/: ci.yml
projects/ai-newsletter/directives/: README.md
projects/ai-newsletter/execution/: README.md  __init__.py  apply_lifecycle.py  cache_utils.py  config.py  configure_aws.py  configure_gemini.py  configure_jina.py  configure_openai.py  configure_slack.py  create_test_workflow.py  import_workflows.py  log_config.py  n8n_utils.py  notify.py  rate_limit.py  test_cache.py  verify_all.py  verify_data.py  verify_rss.py  workflow_adapter.py
projects/ai-newsletter/tests/: __init__.py  conftest.py  test_cache.py  test_configure_scripts.py  test_import_workflows.py  test_integration.py  test_n8n_utils.py  test_notify.py  test_rate_limit.py  test_verify_data.py  test_verify_rss.py  test_workflow_adapter.py
projects/ai-newsletter/workflows/adapted/: newsletter_agent_adapted.json  scraping_pipeline_adapted.json
servers/: README.md
skills/: README.md
(+2567 files in other folders)
